<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting">
        <EditTextPreference
            android:key="body_weight"
            android:title="@string/body_weight"
            android:summary="@string/weight_summary"
            android:dialogTitle="@string/body_weight"
            android:defaultValue="50"/>
        <CheckBoxPreference
            android:key="speak"
            android:title="@string/speak"
            android:summary="@string/speak_summary"
            android:defaultValue="false"/>
        <ListPreference
            android:key="speak_race"
            android:title="@string/speak_race"
            android:summary="@string/speak_race_summary"
            android:entries="@array/speaking_interval_preference"
            android:entryValues="@array/speaking_interval_preference_values"
            android:dependency="speak"
            android:defaultValue="1"/>

        <PreferenceScreen
            android:key="speak_type"
            android:title="@string/speak_type"
            android:dependency="speak">
            <PreferenceCategory
                android:title="@string/speak_type">
                <CheckBoxPreference
                    android:key="tell_distance"
                    android:title="@string/mileage"
                    android:defaultValue="false"/>
                <CheckBoxPreference
                    android:key="tell_time"
                    android:title="@string/time_caculate"
                    android:defaultValue="false"/>
                <CheckBoxPreference
                    android:key="tell_speed"
                    android:title="@string/speed"
                    android:defaultValue="false"/>
                <CheckBoxPreference
                    android:key="tell_step"
                    android:title="@string/steps"
                    android:defaultValue="false"/>
                <CheckBoxPreference
                    android:key="tell_calories"
                    android:title="@string/calorie"
                    android:defaultValue="false"/>
                <CheckBoxPreference
                    android:key="tell_height"
                    android:title="@string/height"
                    android:defaultValue="false"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>