<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ls.sportactivity.ShareSportActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="运动"
            android:textSize="22sp"/>
        <ImageView
            android:id="@+id/sport_share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_share_black"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/map_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/mileage"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/mile_line"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/mileage_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/time_caculate"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/time_line"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/time_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/average_speed"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/speed_line"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/speed_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/steps"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/step_line"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/step_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/calorie"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/calories_line"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/calories_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/height"
            android:textSize="20dp"/>
        <com.ls.Util.LineView
            android:id="@+id/height_line"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical" />
        <TextView
            android:id="@+id/height_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>
